[package]
name = "upgrade_service"
version = "0.1.0"
edition = "2021"

[lib]
name = "upgrade_service"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
# sqlx is optional for now; enable when wiring DB
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

[features]
db = []
